destinationRule.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: user-web-rule
spec:
  host: user-web-server
  subsets:
    - name: v1
      labels:
        version: v1.1
    - name: v2
      labels:
        version: v2.0
